--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -11,20 +11,20 @@
         <div class="col-md-6 col-sm-12">
           <div class="block">
             <div class="form-group">
-              <input name="user_name" type="text" class="form-control" placeholder="Your Name">
+              <input name="user_name" type="text" class="form-control" placeholder="Votre Nom">
             </div>
             <div class="form-group">
-              <input name="user_email" type="text" class="form-control" placeholder="Email Address">
+              <input name="user_email" type="text" class="form-control" placeholder="Email">
             </div>
             <div class="form-group">
-              <input name="user_subject" type="text" class="form-control" placeholder="Subject">
+              <input name="user_subject" type="text" class="form-control" placeholder="Sujet">
             </div>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="block">
             <div class="form-group-2">
-              <textarea name="user_message" class="form-control" rows="4" placeholder="Your Message"></textarea>
+              <textarea name="user_message" class="form-control" rows="4" placeholder="Votre Message"></textarea>
             </div>
             <button class="btn btn-default" type="submit">{{ i18n "submit" }}</button>
           </div>
