--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -11,7 +11,7 @@
         <img class="img-responsive w-100" src="{{ .Params.Image | relURL }}" alt="">
       </div>
       <div class="col-md-4">
-        <div class="Project Details">
+        <div class="project-details">
           <h4>Project Details</h4>
           <ul>
             {{ range .Params.Information }}
