--- a/layouts/project/single.html
+++ b/layouts/project/single.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-md-4">
         <div class="project-details">
-          <h4>Project Details</h4>
+          <h4>Project Detail</h4>
           <ul>
             {{ range .Params.Information }}
             <li><span>{{ .label }} :</span> <strong>{{ .info | markdownify }}</strong></li>
